--- a/arch/arm/plat-omap/Makefile
+++ b/arch/arm/plat-omap/Makefile
@@ -43,3 +43,5 @@ obj-$(CONFIG_MACH_OMAP3EVM) += psp-version.o
 obj-$(CONFIG_MACH_OMAP3_BEAGLE) += psp-version.o
 
 obj-$(CONFIG_OMAP_PM_NOOP) += omap-pm-noop.o
+
+obj-$(CONFIG_HAVE_PWM) += pwm.o
