--- a/drivers/ultrasonic/Makefile
+++ b/drivers/ultrasonic/Makefile
@@ -3,4 +3,5 @@
 #
 
 #ccflags-$(CONFIG_NFC)	+= -DDEBUG -DVERBOSE_DEBUG
-obj-$(CONFIG_ULTRASONIC)	+= ultrasonic.o
+obj-$(CONFIG_ULTRASONIC)			+= ultrasonic.o
+obj-$(CONFIG_ULTRASONIC_HC_SR04)	+= hcsr04.o
