--- a/arch/arm/configs/igep00x0robot_defconfig
+++ b/arch/arm/configs/igep00x0robot_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.37 Kernel Configuration
-# Sun Sep 16 22:55:58 2012
+# Tue Sep 18 20:03:50 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1616,9 +1616,9 @@ CONFIG_USB_GSPCA=m
 # CONFIG_USB_GSPCA_KONICA is not set
 # CONFIG_USB_GSPCA_MARS is not set
 # CONFIG_USB_GSPCA_MR97310A is not set
-# CONFIG_USB_GSPCA_OV519 is not set
-# CONFIG_USB_GSPCA_OV534 is not set
-# CONFIG_USB_GSPCA_OV534_9 is not set
+CONFIG_USB_GSPCA_OV519=m
+CONFIG_USB_GSPCA_OV534=m
+CONFIG_USB_GSPCA_OV534_9=m
 # CONFIG_USB_GSPCA_PAC207 is not set
 # CONFIG_USB_GSPCA_PAC7302 is not set
 # CONFIG_USB_GSPCA_PAC7311 is not set
